--- a/1-preprocess.ipynb
+++ b/1-preprocess.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7c5c5fb",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "WINDOW_SIZE_SEC = 5\n",
     "\n",
     "# 特徴量抽出時のウィンドウのステップ幅\n",
-    "WINDOW_STEP_SEC = 0.5\n"
+    "WINDOW_STEP_SEC = 0.5"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "# ラベル一覧の取得\n",
     "# indexをIDとして使用する．LightGBM はラベル名が数値の連番である必要があるため\n",
     "df_labels = pd.read_csv(DATA_DIR / \"labels.csv\", names=[\"label\", \"description\"])\n",
-    "print(df_labels)\n"
+    "print(df_labels)"
    ]
   },
   {
@@ -98,12 +98,12 @@
    "source": [
     "# データ名の取得 (DATA_DIR内のフォルダ名をリストとして取得)\n",
     "data_names = [f.name for f in DATA_DIR.iterdir() if f.is_dir()]\n",
-    "print(f\"データ名: {data_names}\")\n"
+    "print(f\"データ名: {data_names}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "68d79e72",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
     "\n",
     "for name in data_names:\n",
     "    # 加速度の読み込み\n",
-    "    df = pd.read_csv(\n",
+    "    df_acc = pd.read_csv(\n",
     "        DATA_DIR / name / \"Accelerometer.csv\", names=[\"time\", \"x\", \"y\", \"z\"], header=1\n",
     "    )\n",
     "    # 角速度の読み込み\n",
@@ -130,7 +130,7 @@
     "    sensing_end = max(tricks, key=lambda x: x[\"end\"])[\"end\"]\n",
     "\n",
     "    # sensing_start ～ sensing_end のデータのみ抽出\n",
-    "    df = df[(df[\"time\"] >= sensing_start) & (df_acc[\"time\"] <= sensing_end)]\n",
+    "    df_acc = df_acc[(df_acc[\"time\"] >= sensing_start) & (df_acc[\"time\"] <= sensing_end)]\n",
     "    df_gyro = df_gyro[\n",
     "        (df_gyro[\"time\"] >= sensing_start) & (df_gyro[\"time\"] <= sensing_end)\n",
     "    ]\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3ca15cf9",
    "metadata": {},
    "outputs": [
@@ -266,6 +266,7 @@
     "        .apply(lambda x: x.mode()[0])\n",
     "        .iloc[window_size - 1 :: window_step]\n",
     "        .reset_index(drop=True)\n",
+    "        .astype(int)\n",
     "    )\n",
     "\n",
     "    # 数値列の統計量\n",
@@ -310,6 +311,8 @@
    "outputs": [],
    "source": [
     "# データから特徴量を抽出し，保存\n",
+    "df_features = pd.DataFrame()\n",
+    "\n",
     "for name, dfs in data.items():\n",
     "    df_acc = dfs[\"acc\"]\n",
     "    df_gyro = dfs[\"gyro\"]\n",
@@ -322,33 +325,53 @@
     "    df_acc[\"norm\"] = np.sqrt(df_acc[\"x\"] ** 2 + df_acc[\"y\"] ** 2 + df_acc[\"z\"] ** 2)\n",
     "    df_gyro[\"norm\"] = np.sqrt(df_gyro[\"x\"] ** 2 + df_gyro[\"y\"] ** 2 + df_gyro[\"z\"] ** 2)\n",
     "\n",
+    "    df_acc[\"data_id\"] = name\n",
+    "    df_gyro[\"data_id\"] = name\n",
+    "\n",
+    "    df_merged = pd.merge_asof(\n",
+    "        df_acc.sort_values(\"time\"),\n",
+    "        df_gyro.sort_values(\"time\"),\n",
+    "        on=\"time\",\n",
+    "        by=\"label\",\n",
+    "        tolerance=0.01,  # 許容誤差\n",
+    "        direction=\"nearest\",\n",
+    "        suffixes=(\"_acc\", \"_gyro\"),\n",
+    "    )\n",
+    "\n",
     "    # サンプリング周波数の計算\n",
-    "    fs_acc = 1 / (\n",
-    "        (df_acc[\"time\"].iloc[-1] - df_acc[\"time\"].iloc[0]) / (len(df_acc) - 1)\n",
-    "    )\n",
-    "    fs_gyro = 1 / (\n",
-    "        (df_gyro[\"time\"].iloc[-1] - df_gyro[\"time\"].iloc[0]) / (len(df_gyro) - 1)\n",
+    "    fs = 1 / (\n",
+    "        (df_merged[\"time\"].iloc[-1] - df_merged[\"time\"].iloc[0]) / (len(df_merged) - 1)\n",
     "    )\n",
     "\n",
-    "    # ウィンドウ幅 (サンプル数)\n",
-    "    acc_window_size = int(WINDOW_SIZE_SEC * fs_acc)\n",
-    "    gyro_window_size = int(WINDOW_SIZE_SEC * fs_gyro)\n",
-    "\n",
-    "    # ウィンドウのステップ幅 (サンプル数)\n",
-    "    acc_window_step = int(WINDOW_STEP_SEC * fs_acc)\n",
-    "    gyro_window_step = int(WINDOW_STEP_SEC * fs_gyro)\n",
+    "    # サンプル数のウィンドウ幅とステップ幅\n",
+    "    window_size = int(WINDOW_SIZE_SEC * fs)\n",
+    "    window_step = int(WINDOW_STEP_SEC * fs)\n",
     "\n",
     "    # 特徴量を抽出\n",
-    "    df_acc_features = extract_features(\n",
-    "        df_acc, acc_window_size, acc_window_step, columns=[\"x\", \"y\", \"z\", \"norm\"]\n",
-    "    )\n",
-    "    df_gyro_features = extract_features(\n",
-    "        df_gyro, gyro_window_size, gyro_window_step, columns=[\"x\", \"y\", \"z\", \"norm\"]\n",
+    "    df_features = pd.concat(\n",
+    "        [\n",
+    "            df_features,\n",
+    "            extract_features(\n",
+    "                df_merged,\n",
+    "                window_size,\n",
+    "                window_step,\n",
+    "                columns=[\n",
+    "                    \"x_acc\",\n",
+    "                    \"y_acc\",\n",
+    "                    \"z_acc\",\n",
+    "                    \"norm_acc\",\n",
+    "                    \"x_gyro\",\n",
+    "                    \"y_gyro\",\n",
+    "                    \"z_gyro\",\n",
+    "                    \"norm_gyro\",\n",
+    "                ],\n",
+    "            ),\n",
+    "        ],\n",
+    "        ignore_index=True,\n",
     "    )\n",
     "\n",
     "    # 特徴量をCSVとして保存\n",
-    "    df_acc_features.to_csv(DATA_DIR / name / \"acc_features.csv\", index=False)\n",
-    "    df_gyro_features.to_csv(DATA_DIR / name / \"gyro_features.csv\", index=False)"
+    "df_features.to_csv(DATA_DIR / \"features.csv\", index=False)"
    ]
   }
  ],
